contact section text and image

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
+            <!-- Name: Your Name, ID: YourID -->
+
+    <!-- Header with Navbar -->
+    <header>
+        <nav>
+            <ul class="navbar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- Contact Section -->
+    <section class="contact-section">
+        <div class="contact-info">
+            <h2>Get in Touch</h2>
+            <p>We'd love to hear from you! Reach out for plant care tips or product inquiries.</p>
+            <img src="contactplant.jpg" alt="Contact Plant Image">
+        </div>
     
 </body>
 </html>
