contact footer html

--- a/contact.html
+++ b/contact.html
@@ -41,6 +41,14 @@
             </form>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2025 GreenLeaf Shop. All rights reserved.</p>
+    </footer>
+    
+    <script src="contact.js"></script>
+    
    
 </body>
 </html>
